--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 	font-family: 'Playfair_Display';
 	src:url('/FONTS/Playfair_Display/PlayfairDisplay-Regular.ttf');
 }
+@font-face {
+	font-family: 'Ubuntu-light';
+	src:url('/FONTS/Ubuntu/Ubuntu-Light.ttf');
+}
 * {
 	margin: 0;
 	padding: 0;
