--- a/style.css
+++ b/style.css
@@ -53,15 +53,14 @@ section.content {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin: 100px auto 130px;
+	margin: 100px auto 0px;
 }
 
 article.news {
 	max-width: 45%;
 	display: flex;
 	flex-direction: column;
-
-
+	margin-bottom: 130px;
 }
 
 img.preview, h3 {
@@ -71,3 +70,13 @@ img.preview, h3 {
 h2 {
 	margin-bottom: 40px;
 }
+
+.subscribe {
+	height: 285px;
+	background-color: #f0f0f0;
+}
+
+/*
+.subscribe-content {
+
+}*/
