--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h2 {
 	background-color: #f0f0f0;
 	outline: none;
 	width: 350px;
+	font-size: 14px;
 }
 
 	::-webkit-input-placeholder {color:#626262;}
@@ -128,6 +129,8 @@ h2 {
 	line-height: 60px;
 	border: 1px solid black;
 	margin-bottom: 100px;
+	font-size: 20px;
+	color: #626262;
 }
 
 footer {
@@ -142,7 +145,8 @@ footer {
 	margin: auto;
 	align-items: flex-end;
 	height: 50px;
-
+	font-size: 14px;
+	color: #000000;
 }
 
 .copyright {
