--- a/style.css
+++ b/style.css
@@ -22,18 +22,21 @@
 .header-top {
 	height: 160px;
 	line-height: 160px;
-	margin-top: 50px;
+	margin-top: 25px;
 	display: flex;
 	flex-wrap: wrap;
+	padding-top: 25px;
 }
 
 .logo {
 	display: inline-block;
 	font-family: 'Inconsolata', monospace;
 	text-transform: uppercase;
-	font-size: 32px;
-	letter-spacing: 5px;
+	font-size: 30px;
+	letter-spacing: 6px;
 	margin-right: auto;
+	line-height: 30px;
+	margin-top: 90px;
 
 }
 
@@ -46,7 +49,21 @@
 	justify-content: space-between;
 	letter-spacing: normal;
 	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 30px;
+	margin-top: 90px;
 }
+
+
+/*
+.top-menu ul li:not(:last-child):not(:first-child) {
+	margin-left: 40px;
+}
+*/
+/*
+ сдвигает вправо все элементы навигации кроме первого и последнего, но
+даже тогда перфект пиксель не по макету. или макет под сетку или просто непродуман
+*/
 
 section.content {
 	max-width: 850px;
