--- a/style.css
+++ b/style.css
@@ -15,17 +15,17 @@
 
 .header-content {
 	width: 1060px;
-	margin: 0 auto;
+	margin: 0 auto 85px;
 
 }
 
 .header-top {
-	height: 160px;
-	line-height: 160px;
-	margin-top: 25px;
+	height: 120px;
+	line-height: 135px;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 25px;
+	padding-top: 50px;
+	box-sizing: border-box;
 }
 
 .logo {
@@ -36,7 +36,6 @@
 	letter-spacing: 6px;
 	margin-right: auto;
 	line-height: 30px;
-	margin-top: 91px;
 
 }
 
@@ -51,10 +50,12 @@
 	text-transform: uppercase;
 	font-size: 14px;
 	line-height: 30px;
-	margin-top: 92px;
 }
 
-
+.top-menu a {
+	text-decoration: none;
+	color: #626262;
+}
 /*
 .top-menu ul li:not(:last-child):not(:first-child) {
 	margin-left: 40px;
@@ -70,7 +71,7 @@ section.content {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin: 85px auto 0px;
+	margin: 0px auto 0px;
 
 }
 
@@ -84,13 +85,14 @@ section.content h3 {
 	color: #b4ad9e;
 	text-transform: uppercase;
 	margin-top: 45px;
+	margin-bottom: 80px;
 }
 
 article.news {
 	max-width: 420px;
 	display: flex;
 	flex-direction: column;
-	margin: 50px 0 130px;
+	margin: 50px 0 85px;
 
 }
 
@@ -121,6 +123,8 @@ h2 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-top: 40px;
+	margin-bottom: 55px;
 }
 
 .subscribe-content {
@@ -129,6 +133,14 @@ h2 {
 	border-bottom: 1px solid black;
 	display: flex;
 	flex-direction: column;
+}
+
+.subscribe-content h2 {
+	margin-left: 10px;
+	margin-bottom: 0px;
+	margin-top: -7px;
+	letter-spacing: 1.2px;
+	font-size: 29px;
 }
 
 .subscribe-form {
@@ -160,13 +172,12 @@ h2 {
 
 .load-more {
 	display: block;
-	margin: auto;
+	margin: 80px auto 100px;
 	width: 160px;
 	height: 60px;
 	text-align: center;
 	line-height: 60px;
 	border: 1px solid black;
-	margin-bottom: 100px;
 	font-size: 20px;
 	color: #626262;
 }
@@ -188,7 +199,7 @@ footer {
 }
 
 .copyright {
-	margin-left: 100px;
+	margin-left: 80px;
 }
 
 span {
@@ -197,6 +208,12 @@ span {
 
 i.fa {
 	margin-right: 15px;
+	font-size: 18px;
+
+}
+
+i.fa:last-child {
+	margin-right: 0px;
 }
 
 h3.photodiary {
@@ -204,4 +221,9 @@ h3.photodiary {
 	text-transform: uppercase;
 	color: #b4ad9e;
 	font-size: 14px;
+}
+
+.content p.preview {
+	height: 70px;
+	overflow: hidden;
 }
